--- a/notes/01.python_intro.ipynb
+++ b/notes/01.python_intro.ipynb
@@ -3171,6 +3171,163 @@
     "## 데이터 타입\n",
     "<center><img src=\"./images/01/container.png\", alt=\"container\"/></center>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-3e42bbab4adf>, line 41)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-3e42bbab4adf>\"\u001b[1;36m, line \u001b[1;32m41\u001b[0m\n\u001b[1;33m    sol1)\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "ssafy = {\n",
+    "    \"location\": [\"서울\", \"대전\", \"구미\", \"광주\"],\n",
+    "    \"language\": {\n",
+    "        \"python\": {\n",
+    "            \"python standard library\": [\"os\", \"random\", \"webbrowser\"],\n",
+    "            \"frameworks\": {\n",
+    "                \"flask\": \"micro\",\n",
+    "                \"django\": \"full-functioning\"\n",
+    "            },\n",
+    "            \"data_science\": [\"numpy\", \"pandas\", \"scipy\", \"sklearn\"],\n",
+    "            \"scraping\": [\"requests\", \"bs4\"],\n",
+    "        },\n",
+    "        \"web\" : [\"HTML\", \"CSS\"]\n",
+    "    },\n",
+    "    \"classes\": {\n",
+    "        \"gj\":  {\n",
+    "            \"lecturer\": \"change\",\n",
+    "            \"manager\": \"pro-gj\",\n",
+    "            \"class president\": \"박선용\",\n",
+    "            \"groups\": {\n",
+    "                \"A\": [\"김선만\", \"박승재\", \"공현아\", \"박선용\", \"최화경\", \"정윤선\"],\n",
+    "                \"B\": [\"김상돈\", \"박정우\", \"김기범\", \"남선웅\", \"정진주\"],\n",
+    "                \"C\": [\"박승규\", \"김혁준\", \"김승연\", \"김규리\", \"최수빈\"],\n",
+    "                \"D\": [\"고재형\", \"고태환\", \"양선\", \"윤준석\", \"윤서영\"],\n",
+    "                \"E\": [\"정은지\", \"양예은\", \"정명한\", \"창호연\", \"최동호\"]\n",
+    "            }\n",
+    "        },\n",
+    "        \"gm\": {\n",
+    "            \"lecturer\": \"justin\",\n",
+    "            \"manager\": \"pro-gm\"\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "난이도* 1. 지역(location)은 몇개 있나요? : list length\n",
+    "출력예시)\n",
+    "4\n",
+    "\"\"\"\n",
+    "sol1)\n",
+    "print(len(ssafy['location']))  #값이 잘못되었을 때 값이 error뜸\n",
+    "\n",
+    "sol2)  \n",
+    "print(ssafy.get('location'))   #값이 잘못되었을 때 None뜸\n",
+    "\n",
+    "\"\"\"\n",
+    "난이도** 2. python standard library에 'requests'가 있나요? : 접근 및 list in\n",
+    "출력예시)\n",
+    "False\n",
+    "\"\"\"\n",
+    "sol1)\n",
+    "a = ssafy['language']\n",
+    "print('requests' in a ['python']['python standard library'])\n",
+    "\n",
+    "sol2)\n",
+    "print('requests' in ssafy.get('language').get('python').get('python standard library'))\n",
+    "\n",
+    "# python standard library = [\"os\", \"random\", \"webbrowser\"]\n",
+    "# for requesets in python standard library:\n",
+    "#     print(requests)\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "난이도** 3. gj반의 반장의 이름을 출력하세요. : depth 있는 접근\n",
+    "출력예시)\n",
+    "박선용\n",
+    "\"\"\"\n",
+    "sol1)\n",
+    "print(ssafy['classes']['gj']['class president'])\n",
+    "\n",
+    "sol2)\n",
+    "print(ssafy.get('classes').get('gj').get('class president'))\n",
+    "\n",
+    "\"\"\"\n",
+    "난이도*** 4. ssafy에서 배우는 언어들을 출력하세요. : dictionary.keys() 반복\n",
+    "출력 예시)\n",
+    "python\n",
+    "web\n",
+    "\"\"\"\n",
+    "sol1)\n",
+    "language = (ssafy['language'])\n",
+    "for key in language.keys():\n",
+    "    print(key)\n",
+    "\n",
+    "sol2)\n",
+    "language = ssafy.get('language')\n",
+    "for l in language:\n",
+    "    print(l)\n",
+    "\n",
+    "\"\"\"\n",
+    "난이도*** 5 ssafy gm반의 강사와 매니저의 이름을 출력하세요. dictionary.values() 반복\n",
+    "출력 예시)\n",
+    "justin\n",
+    "pro-gm\n",
+    "\"\"\"\n",
+    "sol1)\n",
+    "teacher = (ssafy['classes']['gm'])\n",
+    "for key in teacher.values():\n",
+    "    print(key)\n",
+    "\n",
+    "sol2)\n",
+    "gm = ssafy.get('classes').get('gm')\n",
+    "for i in gm.values():\n",
+    "    print(i)\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "난이도***** 6. framework들의 이름과 설명을 다음과 같이 출력하세요. : dictionary 반복 및 string interpolation\n",
+    "출력 예시)\n",
+    "flask는 micro이다.\n",
+    "django는 full-functioning이다.\n",
+    "\"\"\"\n",
+    "sol1)\n",
+    "_framework = (ssafy['language']['python']['frameworks'])\n",
+    "for key, val in _framework.items():\n",
+    "    print(f'{key}는 {val}이다.')\n",
+    "    \n",
+    "sol2)\n",
+    "frameworks = ssafy.get('language').get('python'),get('frameworks')\n",
+    "for key, val in frameworks.items():\n",
+    "    print(f'{key}는 {val}이다')\n",
+    "    \n",
+    "\"\"\"\n",
+    "난이도***** 7. 오늘 당번을 뽑기 위해 groups의 E 그룹에서 한명을 랜덤으로 뽑아주세요. : depth 있는 접근 + list 가지고 와서 random.\n",
+    "출력예시)\n",
+    "오늘의 당번은 정은지\n",
+    "\"\"\"\n",
+    "sol1)\n",
+    "import random\n",
+    "e_class = ssafy['classes']['gj']['groups']['E']\n",
+    "slave = random.choice(e_class)\n",
+    "print(f'오늘의 노예는 {slave}')\n",
+    "\n",
+    "sol2)\n",
+    "e = ssafy.get('classes').get('gj').get('groups').get('E')\n",
+    "print(e)\n",
+    "import random\n",
+    "today = random.choice(e)\n",
+    "print(today)"
+   ]
   }
  ],
  "metadata": {
