--- a/notes/03.function.ipynb
+++ b/notes/03.function.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 함수(function)"
+    "# 함수(function)  - 기본값 앞까지 중요!!!!★★★★★"
    ]
   },
   {
@@ -288,7 +288,7 @@
     "\n",
     "**활용법**\n",
     "```python\n",
-    "def func(p1=v1):\n",
+    "def func(p1=v1): #★p1=v1★\n",
     "    return p1\n",
     "```"
    ]
@@ -301,7 +301,12 @@
    "source": [
     "# 이름을 받아서 다음과 같이 인사하는 함수를 만들어보세요. \n",
     "# \"길동, 안녕?\"\n",
-    "# 이름이 없으면 \"익명, 안녕?\" 으로 출력해주세요."
+    "# 이름이 없으면 \"익명, 안녕?\" 으로 출력해주세요.\n",
+    "def hello(name='익명'):\n",
+    "    print(f\"{name}, 안녕?\")\n",
+    "    \n",
+    "hello('sunny')\n",
+    "hello()"
    ]
   },
   {
@@ -337,7 +342,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 오류를 확인해봅시다."
+    "# 오류를 확인해봅시다.\n",
+    "def greeting(name='익명',age):\n",
+    "    print(f'{name}님은 {age}살 입니다.')"
    ]
   },
   {
@@ -346,7 +353,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 수정해 봅시다."
+    "# 수정해 봅시다.\n",
+    "def greeting(age, name='익명'):\n",
+    "    print(f'{name}님은 {age}살 입니다.')\n",
+    "\n",
+    "greeting(20, 'sunny')\n",
+    "greeting(20)"
    ]
   },
   {
@@ -366,7 +378,10 @@
    "source": [
     "# 키워드 인자 예시\n",
     "def greeting(age, name='john'):\n",
-    "    print(f'{name}은 {age}살입니다.')"
+    "    print(f'{name}은 {age}살입니다.')\n",
+    "    \n",
+    "greeting(20,'sunny')\n",
+    "greeting(name='sunny', age=20)"
    ]
   },
   {
@@ -382,7 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greeting(age=24, '철수')"
+    "greeting(age=24, '철수')      #★,end='\\n'★"
    ]
   },
   {
@@ -432,7 +447,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 가변 인자 예시 (print문은 *obejcts를 통해 임의의 숫자의 인자를 모두 처리합니다.)"
+    "# 가변 인자 예시 (print문은 *obejcts를 통해 임의의 숫자의 인자를 모두 처리합니다.)\n",
+    "print('안녕하세요','반갑습니다','저의 이름은', sep='!')"
    ]
   },
   {
@@ -441,7 +457,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# args는 tuple!"
+    "# args는 tuple!\n",
+    "def my_func(*args):\n",
+    "    #print(args)\n",
+    "    for i in args:\n",
+    "        print(i)\n",
+    "my_func(1,2,3,4,5)\n"
    ]
   },
   {
@@ -479,19 +500,36 @@
    "source": [
     "# 아래에 코드를 작성해주세요.\n",
     "def my_max(*args):\n",
-    "    pass\n",
-    "my_max(-1, -2, -3, -4)"
+    "    result = args[0]                              #sol1\n",
+    "    for i in args:\n",
+    "        if result < i:\n",
+    "            result = i\n",
+    "        else:\n",
+    "            pass\n",
+    "        return result\n",
+    "my_max(-1, -2, -3, -4)\n",
+    "\n",
+    "def my_max_2(*args):\n",
+    "    for idx, value in enumerate(args):\n",
+    "        print(idx, value)                         #sol2\n",
+    "        if idx == 0:\n",
+    "            result = value\n",
+    "        else:\n",
+    "            if value > result :\n",
+    "                result = value\n",
+    "    return result\n",
+    "my_max_2(-1, -2, -3, -4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 정의되지 않은 인자들 처리하기\n",
+    "## 정의되지 않은 키워드 인자들 처리하기\n",
     "\n",
     "정의되지 않은 인자들은 `dict` 형태로 처리가 되며, `**`로 표현합니다. \n",
     "\n",
-    "주로 `kwagrs`라는 이름을 사용하며, `**kwargs`를 통해 인자를 받아 처리할 수 있습니다.\n",
+    "주로 `kwagrs`라는 이름을 사용하며, `**kwargs`를 통해 인자를 받아 처리할 수 있습니다.(keyword arguments)\n",
     "\n",
     "**활용법**\n",
     "\n",
@@ -518,7 +556,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 딕셔너리 생성 함수 예시"
+    "# 딕셔너리 생성 함수 예시\n",
+    "greeting = dict(한국어 = '안녕하세요', 영어 = 'hi')\n",
+    "print(type(greeting))"
    ]
   },
   {
@@ -527,7 +567,7 @@
    "source": [
     "### 정의되지 않은 인자를 처리해봅시다. \n",
     "\n",
-    "> `my_dict()` 함수를 만들어 실제로 dictionary 모습으로 출력 함수를 만들어보세요.\n",
+    "> `fake_dict()` 함수를 만들어 실제로 dictionary 모습으로 출력 함수를 만들어보세요.\n",
     ">\n",
     ">\n",
     "\n",
@@ -545,7 +585,11 @@
    "source": [
     "# 아래에 코드를 작성해주세요.\n",
     "def fake_dict(**kwargs):\n",
-    "    pass\n",
+    "    result = {}\n",
+    "    print(kwargs)\n",
+    "    for key, value in kwargs.items():\n",
+    "        result[key] = value\n",
+    "    print(result)\n",
     "fake_dict(한국어='안녕', 영어='hi', 독일어='Guten Tag')"
    ]
   },
@@ -556,7 +600,10 @@
    "outputs": [],
    "source": [
     "# 사실은 dict()는 출력이 아니라 딕셔너리를 리턴합니다. \n",
-    "# 리턴하는 my_fake_dict를 만들어주세요."
+    "# 리턴하는 my_fake_dict를 만들어주세요.\n",
+    "def my_fake_dict(**kwargs):\n",
+    "    return kwargs\n",
+    "my_fake_dict(한국어='안녕', 영어='hi', 독일어='Guten Tag')"
    ]
   },
   {
@@ -574,7 +621,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# user 검증(유사 회원가입)을 작성해봅시다."
+    "# user 검증(유사 회원가입)을 작성해봅시다.\n",
+    "def user(username, password, password_confirmation):\n",
+    "    if password == password_confirmation:\n",
+    "        print(f'{username}님, 가입되었습니다.')\n",
+    "    else:\n",
+    "        print('비밀번호가 일치하지 않습니다.')\n",
+    "user('sunny', 125223, 123123)"
    ]
   },
   {
@@ -595,7 +648,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "user(**my_account)"
@@ -609,7 +664,7 @@
     "\n",
     "> url 패턴을 만들어 문자열을 반환하는  `my_url` 함수를 만들어봅시다.\n",
     ">\n",
-    "> 영진위에서 제공하는 일별 박스오피스 API 서비스는 다음과 같은 방식으로 요청을 받습니다.\n",
+    "> 영진위에서 제공하는 일별 박스오피스 API 서비스는 다음과 같은 방식으로 요청을 받습니다.   (? 뒤에는 parameter가 옴)\n",
     "\n",
     "```\n",
     "기본 요청 URL : http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?\n",
@@ -625,10 +680,10 @@
     "my_url(key='abc', targetDt='yyyymmdd')\n",
     "\n",
     "api = {\n",
-    "    'key': 'abc',\n",
+    "    'key': '123123',\n",
     "    'targetDt': 'yyyymmdd'\n",
     "}\n",
-    "my_url(**api)\n",
+    "print(my_url(**api))\n",
     "\n",
     "예시 출력)\n",
     "'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?itemPerPage=10&key=abc&targetDt=yyyymmdd&'\n",
@@ -641,7 +696,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 여기에 코드를 작성해주세요."
+    "# 여기에 코드를 작성해주세요.\n",
+    "def my_url(itemPerPage=10, **kwargs):\n",
+    "    base_url = 'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?'\n",
+    "    base_url += f'itemPerPage={itemPerPage}&'\n",
+    "    #print(base_url)\n",
+    "    for key, value in kwargs.items():\n",
+    "        base_url += f'{key}={value}&'\n",
+    "    return base_url\n",
+    "\n",
+    "my_url(key='abc', targetDt='yyyymmdd')"
    ]
   },
   {
@@ -657,7 +721,7 @@
     "```\n",
     "> 아래의 두가지 상황만 만들도록 하겠습니다. <\n",
     "\n",
-    "key, targetDt가 없으면, '필수 요청변수가 누락되었습니다.'\n",
+    "key, targetDt가 없으면, '필수 요청변수가 누락되었습니다.'  (return -> 함수의 기능이 끝났다!)\n",
     "\n",
     "itemPerPage의 범위가 1~10을 넘어가면, '1~10까지의 값을 넣어주세요.'\n",
     "```"
@@ -669,7 +733,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 여기에 코드를 작성해주세요"
+    "# 여기에 코드를 작성해주세요\n",
+    "def my_url(itemPerPage=10, **kwargs):\n",
+    "    if itemPerPage not in range(1,11):\n",
+    "        return \"1~10까지의 값을 넣어주세요.\"\n",
+    "    if 'key' not in kwargs or 'targetDt'not in kwargs :\n",
+    "        return \"필수값 누락\"\n",
+    "    \n",
+    "    base_url = 'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?itemPerPage=10&key=abc&targetDt=yyyymmdd&'\n",
+    "    base_url += f'itemPerPage={itemPerPage}&'\n",
+    "    #print(base_url)\n",
+    "    \n",
+    "    for key, value in kwargs.items():\n",
+    "        base_url += f'{key}={value}&'\n",
+    "    return base_url\n",
+    "\n",
+    "my_url(targetDt='yyyymmdd')"
    ]
   },
   {
@@ -694,7 +773,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 따라서 첫시간에 내장함수의 식별자를 사용할 수 없었던 예제에서 오류가 생기는 이유를 확인할 수 있습니다."
+    "# 따라서 첫시간에 내장함수의 식별자를 사용할 수 없었던 예제에서 오류가 생기는 이유를 확인할 수 있습니다.\n",
+    "str = '5'\n",
+    "print(str)\n",
+    "str(5)"
    ]
   },
   {
@@ -736,7 +818,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 전역 변수를 바꿀 수 있을 까요?"
+    "# 전역 변수를 바꿀 수 있을 까요?\n",
+    "global_num = 3\n",
+    "def localscope2():\n",
+    "    global_num = 5\n",
+    "    print(f'global_num이 {global_num}으로 바꼈습니다.')\n",
+    "##여기까지가 함수의 내부! 함수 밖에 있는 것들과는 이름이 같아도 다름!\n",
+    "localscope2()\n",
+    "print(global_num)"
    ]
   },
   {
@@ -745,7 +834,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 굳이 전역에 있는 변수를 바꾸고 싶다면, 아래와 같이 선언할 수 있습니다."
+    "# 굳이 전역에 있는 변수를 바꾸고 싶다면, 아래와 같이 선언할 수 있습니다.\n",
+    "g_num = 3\n",
+    "def g_func():\n",
+    "    global g_num\n",
+    "    g_num = 5\n",
+    "    print(f'g_num이 {g_num}으로 바뀜')\n",
+    "g_func()\n",
+    "print(g_num)"
    ]
   },
   {
@@ -754,9 +850,9 @@
    "source": [
     "이름공간은 각자의 수명주기가 있습니다.\n",
     "\n",
-    "* built-in scope : 파이썬이 실행된 이후부터 끝까지 \n",
+    "* built-in scope : 파이썬이 실행된 이후부터 끝까지  ex)str\n",
     "\n",
-    "* Global scope : 모듈이 호출된 시점 이후 혹은 이름 선언된 이후부터 끝까지\n",
+    "* Global scope : 모듈이 호출된 시점 이후 혹은 이름 선언된 이후부터 끝까지 \n",
     "\n",
     "* Local/Enclosed scope : 함수가 실행된 시점 이후부터 리턴할때 까지"
    ]
@@ -803,7 +899,11 @@
    "source": [
     "# 아래에 코드를 작성해주세요.\n",
     "def fact(n):\n",
-    "    pass\n",
+    "    result = 1\n",
+    "    while n > 1:\n",
+    "        result = n * result   #result *= n\n",
+    "        n = n-1             #n -=1\n",
+    "        return(result)\n",
     "fact(5)"
    ]
   },
@@ -828,7 +928,10 @@
    "source": [
     "# 아래에 코드를 작성해주세요.\n",
     "def factorial(n):\n",
-    "    pass\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return factorial(n-1) * n\n",
     "factorial(5)"
    ]
   },
@@ -889,7 +992,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 여기에서 오류를 확인해보자!"
+    "# 여기에서 오류를 확인해보자!\n",
+    "def test_r():\n",
+    "    return test_r()\n",
+    "test_r()"
    ]
   },
   {
@@ -932,20 +1038,38 @@
    "source": [
     "# 재귀를 이용한 코드를 작성해주세요.\n",
     "def fib(n):\n",
-    "    pass\n",
+    "    if n == 1 or n == 0:\n",
+    "        return 1\n",
+    "    else: \n",
+    "        return fib(n-1) + fib(n-2)\n",
     "fib(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 반복문을 이용한 코드를 작성해주세요.\n",
+    "# 반복문을 이용한 코드를 작성해주세요. ☆어렵쓰... 따흐흑;;\n",
     "def fib_loop(n):\n",
-    "    pass\n",
-    "fib_loop(4)"
+    "    result = [1,1]\n",
+    "    for i in range(1,n):\n",
+    "        fib_sum = result[i] + result[i-1]\n",
+    "        result.append(fib_sum)\n",
+    "        return result[-1]\n",
+    "fib_loop(5)"
    ]
   },
   {
@@ -1018,6 +1142,85 @@
    "outputs": [],
    "source": [
     "# 아래에 코드를 작성해주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 함수를 쓰는 이유\n",
+    "# : grouping\n",
+    "# : reuse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "secret = random.randint(1,20)\n",
+    "print('추측해보세요')\n",
+    "\n",
+    "for count in range(6):\n",
+    "    guess = int(input('입력 :'))\n",
+    "    \n",
+    "    if secret < guess:\n",
+    "        print('down')\n",
+    "    elif secret > guess:\n",
+    "        print('up')\n",
+    "    else:\n",
+    "        break\n",
+    "        \n",
+    "if guess == secret:\n",
+    "    print('ok')\n",
+    "else:\n",
+    "    print('끝')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 맞춰보세요\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def generate_num():\n",
+    "    return random.randint(1,20)\n",
+    "def compare_num(guess, secret):\n",
+    "    if guess < secret:\n",
+    "        return 'up'\n",
+    "    elif guess > secret:\n",
+    "        return 'down'\n",
+    "    else:\n",
+    "        return 'ok'\n",
+    "    \n",
+    "def guess_num():\n",
+    "    print('숫자를 맞춰보세요')\n",
+    "    secret = generate_num()\n",
+    "    \n",
+    "    for count in range(6):\n",
+    "        guess = int(input('input : '))\n",
+    "        status = compare_num(guess, secret)\n",
+    "        \n",
+    "        if status == 'ok':\n",
+    "            return '정답'\n",
+    "        else:\n",
+    "            print(status)\n",
+    "guess_num()"
    ]
   }
  ],
