--- a/problems/Untitled1.ipynb
+++ b/problems/Untitled1.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def positive_sum(*numbers):\n",
-    "    sum = 0\n",
+    "    total = 0\n",
     "    for number in numbers:\n",
     "        if number > 0:\n",
-    "            sum += number \n",
-    "    return sum"
+    "            total += number \n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,20 @@
    ],
    "source": [
     "print(positive_sum(5, -4, 9, -8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_end(char):\n",
+    "    count = 0\n",
+    "    for i in char:\n",
+    "        if len(i) >= 2 and i[0] == i[-1]:\n",
+    "            count += 1\n",
+    "    return count"
    ]
   },
   {
@@ -81,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "{'A': 5, 'B': 2, 'AB': 3, 'O': 4}\n"
      ]
     }
    ],
@@ -112,6 +126,82 @@
     "        \n",
     "result = {\"A\":a, \"B\":b, \"AB\":ab, \"O\":o}\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-11-08884213406e>, line 24)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-11-08884213406e>\"\u001b[1;36m, line \u001b[1;32m24\u001b[0m\n\u001b[1;33m    return (f'Circle:{self.center}, r:{self.r})\u001b[0m\n\u001b[1;37m                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    def __init__(self,x,y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return(f'=> Point:{self.x}:{self.y}')\n",
+    "    \n",
+    "class Circle(Point):\n",
+    "    def __init(self,center,r):\n",
+    "        self.center = center\n",
+    "        self.r = r\n",
+    "        \n",
+    "    def get_area(self):\n",
+    "        return(3.14 * (self.r)**2)\n",
+    "    \n",
+    "    def get_perimeter(self):\n",
+    "        return (2 * 3.14 * (self.r))\n",
+    "    \n",
+    "    def get_center(self):\n",
+    "        return (f'{self.center}')\n",
+    "    \n",
+    "    def __Str__(self):\n",
+    "        return (f'Circle:{self.center}, r:{self.r})\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point:\n",
+    "    def __init__(self,x,y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return (f'=>Point:{self.x},{self.y}')\n",
+    "    \n",
+    "class Circle(Point):\n",
+    "    def __init(self,center,r):\n",
+    "        self.center = center\n",
+    "        self.r = r\n",
+    "    \n",
+    "    def get_area(self):\n",
+    "        return (3.14 * (self.r)**2)\n",
+    "    \n",
+    "    def get_perimeter(self):\n",
+    "        return (2 * 3.14 * (self.r))\n",
+    "    \n",
+    "    def get_center(self):\n",
+    "        return (f'{self.center}')\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return (f'Circle:{self.center},r:{self.r}')\n",
+    "    \n",
+    "    "
    ]
   }
  ],
