--- a/problems/problem03.ipynb
+++ b/problems/problem03.ipynb
@@ -12,9 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3333333333333335"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "locationA = {\n",
     "    'king': 2,\n",
@@ -23,7 +34,10 @@
     "    'ria': 3\n",
     "}\n",
     "\n",
-    "# 아래에 코드를 작성하세요."
+    "def burger(king, mc, kfc, ria):\n",
+    "    return (king + mc + kfc)/ ria\n",
+    "    \n",
+    "burger(**locationA)    "
    ]
   },
   {
@@ -48,11 +62,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72.0\n"
+     ]
+    }
+   ],
    "source": [
     "# 아래에 코드를 작성하세요\n",
+    "# 아래에 코드를 작성하세요.\n",
+    "def tax(num):\n",
+    "    if num <= 1200:\n",
+    "        return num * 0.06\n",
+    "    elif 1200 < num <= 4600:\n",
+    "        return 72 + (num - 1200) * 0.15 \n",
+    "    else:\n",
+    "        return 582 + (num - 4600) * 0.35\n",
+    "    print(num)\n",
+    "    \n",
+    "tax(10000)\n",
     "\n",
     "print(tax(1200))"
    ]
