--- a/notes/03.function.ipynb
+++ b/notes/03.function.ipynb
@@ -184,24 +184,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "max(1,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5가 더 큽니다\n"
+     ]
+    }
+   ],
    "source": [
-    "def my_max(a, b):\n",
-    "    # 여기에 my_max 함수를 만들어주세요.\n",
-    "    pass\n",
-    "    \n",
-    "my_max(1, 5)"
+    "def my_max(a,b):\n",
+    "    if a > b:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return b\n",
+    "score = my_max(1,5)\n",
+    "print(f'{score}가 더 큽니다')"
    ]
   },
   {
@@ -439,7 +460,7 @@
     "\n",
     "앞서 설명한 `print()`처럼 정해지지 않은 임의의 숫자의 인자를 받기 위해서는 가변인자를 활용합니다. \n",
     "\n",
-    "가변인자는 `tuple` 형태로 처리가 되며, `*`로 표현합니다. \n",
+    "가변인자는 `tuple` 형태로 처리가 되며, `*`로 표현합니다. 마지막 함수 출력인자는 반드시 복수\n",
     "\n",
     "**활용법**\n",
     "\n",
@@ -460,9 +481,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# args는 tuple!\n",
     "def my_func(*args):\n",
